# awc-devkit

./: .gitignore  README.md  build_backend.py  pyproject.toml
adapters/: README.md
adapters/claude-skills/: README.md  adapter_stub.py
adapters/common/: README.md  interfaces.md  lifecycle-hooks.md
adapters/crewai/: README.md  adapter_stub.py
adapters/http-self-hosted/: README.md
adapters/langgraph/: README.md  adapter_stub.py
adapters/openai-agents/: README.md  adapter_stub.py
docs/: README.md  run-a-self-hosted-worker.md  self-hosted-onboarding.md  validate-a-worker.md
examples/: README.md
runtime/: README.md  build_backend.py  pyproject.toml
runtime/src/awc_runtime/: __init__.py  cli.py  runtime.py  types.py
runtime/src/awc_runtime/audit/: events.py  ledger.py
runtime/src/awc_runtime/budget/: checker.py
runtime/src/awc_runtime/escalation/: matcher.py
runtime/src/awc_runtime/loader/: schema_loader.py
runtime/src/awc_runtime/memory/: store.py
runtime/src/awc_runtime/middleware/: __init__.py
runtime/src/awc_runtime/performance/: metrics.py  report.py
runtime/src/awc_runtime/policy_engine/: authority_guard.py  decision.py  scope_guard.py
runtime/src/awc_runtime/validator/: validator.py
runtime/tests/: test_audit.py  test_authority_guard.py  test_budget.py  test_escalation.py  test_example_agents.py  test_reports.py  test_runtime_smoke.py  test_scope_guard.py
scripts/: bootstrap.sh  smoke_test.sh  validate_self_hosted_onboarding.py
test-suite/: README.md  build_backend.py  pyproject.toml
test-suite/docs/: certification-logic.md  compatibility-levels.md  test-categories.md
test-suite/fixtures/: expected_audit.json  invalid_agent.yaml  sample_daily_report.json  valid_agent.yaml
test-suite/schemas/: compliance-report.schema.json
test-suite/src/awc_test_suite/: __init__.py  compatibility.py  loader.py  report.py  result_types.py  runner.py  self_hosted.py
test-suite/tests/audit_tests/: test_audit_event_types.py  test_audit_fields.py  test_audit_on_block.py  test_audit_on_escalation.py
test-suite/tests/behavior_tests/: test_approval_required_escalates_or_blocks.py  test_budget_exceeded.py  test_escalation_trigger.py  test_forbidden_action_block.py
test-suite/tests/reporting_tests/: test_daily_report_format.py  test_report_required_fields.py
test-suite/tests/schema_tests/: test_authority_required.py  test_identity_required.py  test_memory_required.py  test_scope_required.py  test_self_hosted_example_loadability.py  test_self_hosted_http_shapes.py  test_self_hosted_metadata.py
(+17 files in other folders)
